# booking-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_create_bookings.py
app/: config.py  database.py  logging.py  main.py  models.py  rate_limit.py  repository.py  schemas.py
app/api/: bookings.py
app/tasks/: broker.py  confirm.py
tests/: conftest.py  test_api.py  test_worker.py
